Better mobile menu.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -134,6 +134,10 @@ pre {
     }
 
     /* Nav */
+    .nav-bar {
+        justify-content: start;
+        flex-wrap: wrap;
+    }
     .nav-item h1 {
         font-size: 130%;
     }
