--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,10 @@ a:hover {
 }
 pre {
     font-size : 100%;
-    color: #e83e8c
+    color: #e83e8c;
+}
+code {
+    color: #e83e8c;
 }
 .image-container {
     display: flex;
