--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,295 +1,293 @@
-
 /* General */
 h1 {
-    font-family: Manrope;
-    font-weight: 500;
-    font-size: 200%;
-    color: #2F344C
+  font-family: Manrope;
+  font-weight: 500;
+  font-size: 200%;
+  color: #2f344c;
 }
 h3 {
-    font-family: Manrope;
-    font-weight: 500;
-    font-size: 1.5rem;
-    color: #2F344C
+  font-family: Manrope;
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: #2f344c;
 }
 h4 {
-    font-family: Manrope;
-    font-weight: 500;
-    font-size: 1.4rem;
-    color: #2F344C;
-    margin-top: 8px;
-    margin-bottom: 8px;
+  font-family: Manrope;
+  font-weight: 500;
+  font-size: 1.4rem;
+  color: #2f344c;
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 h5 {
-    font-family: Lora;
-    font-weight: 500;
-    font-size: 100%;
-    color: #2F344C;
+  font-family: Lora;
+  font-weight: 500;
+  font-size: 100%;
+  color: #2f344c;
 }
 h6 {
-    margin-top : 0px;
-    font-family: Lora;
-    font-weight: 500;
-    font-size: 1.6rem;
+  margin-top: 0px;
+  font-family: Lora;
+  font-weight: 500;
+  font-size: 1.6rem;
 }
 p {
-    font-family: Lora;
-    font-size: 110%;
-    color: #2F344C;
-    line-height: 1.5;
+  font-family: Lora;
+  font-size: 110%;
+  color: #2f344c;
+  line-height: 1.5;
 }
 a:link {
-    color: #5B85AA;
-    text-decoration: none;
+  color: #5b85aa;
+  text-decoration: none;
 }
 a:visited {
-    color: #5B85AA;
-    text-decoration: none;
+  color: #5b85aa;
+  text-decoration: none;
 }
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 pre {
-    font-size : 100%;
-    color: #5B85AA;
+  font-size: 100%;
+  color: #5b85aa;
 }
 code {
-    color: #666666;
-    font-weight: 900;
+  color: #666666;
+  font-weight: 900;
 }
 .image-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .image-container img {
-    max-width: 800px;
+  max-width: 800px;
 }
 .image-container p {
-    text-align: center;
+  text-align: center;
 }
 .large-image-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .large-image-container img {
-    max-width: 100px;
-    width: 95%;
+  max-width: 100px;
+  width: 95%;
 }
 .large-image-container p {
-    text-align: center;
+  text-align: center;
 }
 li {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 ul {
-    list-style-type: none; /* Remove bullets */
-    padding: 0; /* Remove padding */
-    margin: 0; /* Remove margins */
+  list-style-type: none; /* Remove bullets */
+  padding: 0; /* Remove padding */
+  margin: 0; /* Remove margins */
 }
 hr {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
 /* Content Cards */
 .content-card {
-    display: flex;    
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 .content-card-left {
-    width: 30%;
+  width: 30%;
 }
 .content-card-left img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 .content-card-right {
-    width: 70%;
-    padding-left: 20px;
+  width: 70%;
+  padding-left: 20px;
 }
 
 /* Center Piece */
 .center-piece {
-    width: 100%;
-    display: flex;
-    justify-content: start;
-    padding-top: 20px;
-    background-color: white;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  padding-top: 20px;
+  background-color: white;
 }
 .center-piece div {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
 
 .center-piece div h1 {
-    font-size: 300%;
-    font-weight: 700;
-    margin-bottom: 0px;
+  font-size: 300%;
+  font-weight: 700;
+  margin-bottom: 0px;
 }
 .center-piece div h3 {
-    font-size: 150%;
-    font-weight: 300;
+  font-size: 150%;
+  font-weight: 300;
 }
 
 /* Nav */
 .nav-bar {
-    user-select: none;
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  user-select: none;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 .nav-bar-left {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 .nav-bar-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 .nav-bar img {
-    width: 40px;
+  width: 40px;
 }
 .nav-item {
-    cursor: pointer;
-    padding: 0px;
-    margin-right: 16px;
+  cursor: pointer;
+  padding: 0px;
+  margin-right: 16px;
 }
 .nav-item h1 {
-    font-size: 150%;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    color: #2F344C;
+  font-size: 150%;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  color: #2f344c;
 }
 .nav-item h1 a {
-    color: #2F344C;
+  color: #2f344c;
 }
 .hamburger {
-    display: none;
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    z-index: 1000;
-    display: none;
-    cursor: pointer;
-    user-select: none;
-    height: 100px;
+  display: none;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
+  display: none;
+  cursor: pointer;
+  user-select: none;
+  height: 100px;
 }
 .nav-menu {
-    display: none;
-    user-select: none;
-    position: absolute;
-    left: -100%;
-    top: 0;
-    display: flex;
-    padding-top: 64px;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    background-color: #2F344C;
-    height: 100vh;
-    z-index: 100;
+  display: none;
+  user-select: none;
+  position: absolute;
+  left: -100%;
+  top: 0;
+  display: flex;
+  padding-top: 64px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: #2f344c;
+  height: 100vh;
+  z-index: 100;
 }
 .nav-menu hr {
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 0px;
-    opacity: 0.2;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 0px;
+  opacity: 0.2;
 }
-.nav-menu a {      
-    cursor: pointer;
-    padding: 0px 20px;
-    text-decoration: none;
-    color: white;
-    border: "1px solid #2F344C";
+.nav-menu a {
+  cursor: pointer;
+  padding: 0px 20px;
+  text-decoration: none;
+  color: white;
+  border: "1px solid #2F344C";
 }
 
 /* Page */
 .page-container {
-    max-width: 1080px;
-    margin: auto;
-    padding: 30px;
-    padding-top: 0px;
+  max-width: 1080px;
+  margin: auto;
+  padding: 30px;
+  padding-top: 0px;
 }
 
 @media screen and (max-width: 900px) {
+  /* General */
+  h1 {
+    font-size: 190%;
+  }
+  h3 {
+    font-size: 1.2rem;
+  }
+  h5 {
+    font-size: 120%;
+  }
+  p {
+    font-size: 110%;
+  }
+  pre {
+    font-size: 120%;
+  }
+  .image-container img {
+    max-width: 100%;
+    padding: 20px;
+  }
+  .large-image-container img {
+    max-width: 100%;
+    padding: 20px;
+  }
 
-    /* General */
-    h1 {
-        font-size: 190%;
-    }
-    h3 {
-        font-size: 1.2rem;
-    }
-    h5 {
-        font-size: 120%;
-    }
-    p {
-        font-size: 110%;
-    }
-    pre {
-        font-size : 120%;
-    }
-    .image-container img {
-        max-width: 100%;
-        padding: 20px;
-    }
-    .large-image-container img {
-        max-width: 100%;
-        padding: 20px;
-    }
+  /* Content Cards */
+  .content-card {
+    display: flex;
+    flex-direction: column;
+  }
+  .content-card-left {
+    width: 100%;
+  }
+  .content-card-right {
+    width: 100%;
+    padding-left: 0px;
+  }
 
-    /* Content Cards */
-    .content-card {
-        display: flex;    
-        flex-direction: column;
-    }
-    .content-card-left {
-        width: 100%;
-    }
-    .content-card-right {
-        width: 100%;
-        padding-left: 0px;
-    }
+  /* Center Piece */
+  .center-piece div h1 {
+    font-size: 250%;
+  }
+  .center-piece div h3 {
+    font-size: 120%;
+  }
 
-    /* Center Piece */
-    .center-piece div h1 {
-        font-size: 250%;
-    }
-    .center-piece div h3 {
-        font-size: 120%;
-    }
-
-    /* Nav */
-    .nav-bar {
-        height: 48px;
-    }
-    .hamburger {
-        display: block;       
-    }
-    .hamburger.active {
-        color: white;
-    }
-    .nav-bar-left {
-        display: none;
-    }
-    .nav-menu {       
-        left: -100%;   
-        transition: left 0.3s ease;
-    }
-    .nav-menu.active {
-        left: 0;
-    }
-    .nav-bar-right {
-        display: none;
-    }
+  /* Nav */
+  .nav-bar {
+    height: 48px;
+  }
+  .hamburger {
+    display: block;
+  }
+  .hamburger.active {
+    color: white;
+  }
+  .nav-bar-left {
+    display: none;
+  }
+  .nav-menu {
+    left: -100%;
+    transition: left 0.3s ease;
+  }
+  .nav-menu.active {
+    left: 0;
+  }
+  .nav-bar-right {
+    display: none;
+  }
 }
